# CG_Raytracing

./: CMakeLists.txt  geometry.cpp  geometry.hpp  main.cpp  model.hpp  renderer.cpp  renderer.hpp
models/vikingroom/: cornell-box.mtl
src/: bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  helper.hpp  main.cpp  material.hpp  model.cpp  model.hpp  ray.hpp  record.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  tinyxml2.cpp
